Small changes after paper acceptance.

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 This respository holds all data and code of the following paper:
 
-Senf, C., Pflugmacher, D., Zhiqiang, Y., Sebald, S., Knorrn, J., Neumann, M., Hostert, P., and Seidl, R. (in review) Canopy mortality has doubled across Europe’s temperate forests in the last three decades. Nature Communications.
+Senf, C., Pflugmacher, D., Zhiqiang, Y., Sebald, S., Knorrn, J., Neumann, M., Hostert, P., and Seidl, R. (in press) Canopy mortality has doubled across Europe’s temperate forests in the last three decades. Nature Communications.
 
 Please see the data and lib folder for further specifications.
