--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
-This respository holds all data and code of the following paper:
+### This respository holds all data and code of the following paper:
 
-Senf, C., Pflugmacher, D., Zhiqiang, Y., Sebald, S., Knorrn, J., Neumann, M., Hostert, P., and Seidl, R. (in press) Canopy mortality has doubled across Europe’s temperate forests in the last three decades. Nature Communications.
+Senf, C., Pflugmacher, D., Zhiqiang, Y., Sebald, J., Knorrn, J., Neumann, M., Hostert, P. and Seidl, R. (2018) Canopy mortality has doubled across Europe’s temperate forests in the last three decades. Nature Communications, 9, 4978. https://doi.org/10.1038/s41467-018-07539-6
 
 Please see the data and lib folder for further specifications.
